[tool.poetry]
name = "connect-devops_testing-library"
version = "0.1.0"
license = "Apache-2.0"
readme = './README.md'
description = "Testing framework to ease Connect EaaS Processors development."
repository = 'https://github.com/cloudblue/connect-devops-testing-library'
packages = [
    { include = "connect" },
]
authors = [
    "CloudBlue LLC"
]
keywords = [
    'connect',
    'eaas',
    'testing',
    'framework'
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
behave = "^1.2.*"
connect-openapi-client = "^23.*"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = { extras = ["toml"], version = "^5.3" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-p no:cacheprovider --cov=connect.devops_testing --cov-report=html --cov-report=xml --cov-report=term"

[tool.coverage.run]
omit = ["tests/*", "venv*/*", "setup.py"]
relative_files = true
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "import",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
skip_covered = true
